--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
           let description = parsedMessage["UpdateDescription"]["description"];
           talks[talk_id].description = description;
           talks[talk_id].update();
+        } else if (parsedMessage["UpdateScheduledAt"] !== undefined) {
+          let talk_id = parsedMessage["UpdateScheduledAt"]["talk_id"];
+          let scheduled_at = parsedMessage["UpdateScheduledAt"]["scheduled_at"];
+          talks[talk_id].scheduledAt = scheduled_at;
+          talks[talk_id].update();
         } else if (parsedMessage["UpdateDuration"] !== undefined) {
           let talk_id = parsedMessage["UpdateDuration"]["talk_id"];
           let duration = parsedMessage["UpdateDuration"]["duration"];
@@ -299,25 +304,78 @@
           this.titleElement = this.talkElement.appendChild(
             document.createElement("h1")
           );
-          this.titleElement.id = `talk-${this.id}-title`;
           this.titleElement.innerText = this.title;
+          this.titleElement.onclick = () => {
+            this.titleEditElement.value = this.title;
+            this.talkElement.replaceChild(
+              this.titleEditElement,
+              this.titleElement
+            );
+            this.titleEditElement.focus();
+          };
+
+          this.titleEditElement = document.createElement("input");
+          this.titleEditElement.oninput = () => {
+            webSocket.send(
+              JSON.stringify({
+                UpdateTitle: {
+                  talk_id: this.id,
+                  title: this.titleEditElement.value,
+                },
+              })
+            );
+          };
+          this.titleEditElement.onblur = () => {
+            this.talkElement.replaceChild(
+              this.titleElement,
+              this.titleEditElement
+            );
+          };
 
           this.descriptionElement = this.talkElement.appendChild(
             document.createElement("div")
           );
-          this.descriptionElement.id = `talk-${this.id}-description`;
           this.descriptionElement.innerText = this.description;
+          this.descriptionElement.onclick = () => {
+            this.descriptionEditElement.value = this.description;
+            this.talkElement.replaceChild(
+              this.descriptionEditElement,
+              this.descriptionElement
+            );
+            this.descriptionEditElement.focus();
+          };
 
-          this.timingElement = this.talkElement.appendChild(
+          this.descriptionEditElement = document.createElement("input");
+          this.descriptionEditElement.oninput = () => {
+            webSocket.send(
+              JSON.stringify({
+                UpdateDescription: {
+                  talk_id: this.id,
+                  description: this.descriptionEditElement.value,
+                },
+              })
+            );
+          };
+          this.descriptionEditElement.onblur = () => {
+            this.talkElement.replaceChild(
+              this.descriptionElement,
+              this.descriptionEditElement
+            );
+          };
+
+          this.scheduledAtElement = this.talkElement.appendChild(
             document.createElement("div")
           );
-          this.timingElement.id = `talk-${this.id}-timing`;
-          this.timingElement.innerText = this.generateTiming();
+          this.scheduledAtElement.innerText = this.generateScheduledAt();
+
+          this.durationElement = this.talkElement.appendChild(
+            document.createElement("div")
+          );
+          this.durationElement.innerText = this.generateDuration();
 
           this.noobsElement = this.talkElement.appendChild(
             document.createElement("div")
           );
-          this.noobsElement.id = `talk-${this.id}-noobs`;
           this.noobsCheckboxElement = this.noobsElement.appendChild(
             document.createElement("input")
           );
@@ -326,17 +384,21 @@
           this.noobsCheckboxElement.onchange = () => {
             webSocket.send(
               JSON.stringify({
-                [this.noobsCheckboxElement.checked ? "AddNoob" : "RemoveNoob"]: {
-                  talk_id: this.id,
-                  user_id: currentUserId,
-                },
+                [this.noobsCheckboxElement.checked ? "AddNoob" : "RemoveNoob"]:
+                  {
+                    talk_id: this.id,
+                    user_id: currentUserId,
+                  },
               })
             );
           };
           this.noobsLabelElement = this.noobsElement.appendChild(
             document.createElement("label")
           );
-          this.noobsLabelElement.setAttribute("for", `talk-${this.id}-noobs-checkbox`);
+          this.noobsLabelElement.setAttribute(
+            "for",
+            `talk-${this.id}-noobs-checkbox`
+          );
           this.noobsLabelElement.innerText = "Noobs";
           this.noobsListElement = this.noobsElement.appendChild(
             document.createElement("div")
@@ -346,7 +408,6 @@
           this.nerdsElement = this.talkElement.appendChild(
             document.createElement("div")
           );
-          this.nerdsElement.id = `talk-${this.id}-nerds`;
           this.nerdsCheckboxElement = this.nerdsElement.appendChild(
             document.createElement("input")
           );
@@ -355,17 +416,21 @@
           this.nerdsCheckboxElement.onchange = () => {
             webSocket.send(
               JSON.stringify({
-                [this.nerdsCheckboxElement.checked ? "AddNerd" : "RemoveNerd"]: {
-                  talk_id: this.id,
-                  user_id: currentUserId,
-                },
+                [this.nerdsCheckboxElement.checked ? "AddNerd" : "RemoveNerd"]:
+                  {
+                    talk_id: this.id,
+                    user_id: currentUserId,
+                  },
               })
             );
           };
           this.nerdsLabelElement = this.nerdsElement.appendChild(
             document.createElement("label")
           );
-          this.nerdsLabelElement.setAttribute("for", `talk-${this.id}-nerds-checkbox`);
+          this.nerdsLabelElement.setAttribute(
+            "for",
+            `talk-${this.id}-nerds-checkbox`
+          );
           this.nerdsLabelElement.innerText = "Nerds";
           this.nerdsListElement = this.nerdsElement.appendChild(
             document.createElement("div")
@@ -377,7 +442,8 @@
           this.moveToCorrectSection();
           this.applyTitle();
           this.applyDescription();
-          this.timingElement.innerText = this.generateTiming();
+          this.updateScheduledAt();
+          this.updateDuration();
           this.updateNerds();
           this.updateNoobs();
         }
@@ -389,15 +455,15 @@
           }
           let targetSection = "unscheduled";
           if (this.scheduledAt !== null) {
-            let begin = this.scheduledAt.secs_since_epoch;
-            let end = this.scheduledAt.secs_since_epoch + this.duration.secs;
-            let now = Math.floor(Date.now() / 1000);
+            let beginMinutes = Math.floor(this.scheduledAt.secs_since_epoch / 60);
+            let endMinutes = Math.floor((this.scheduledAt.secs_since_epoch + this.duration.secs) / 60);
+            let nowMinutes = Math.floor(Date.now() / 60000);
 
-            if (now > end) {
+            if (nowMinutes >= endMinutes) {
               targetSection = "past";
-            } else if (now < end && now > begin) {
+            } else if (nowMinutes < endMinutes && nowMinutes >= beginMinutes) {
               targetSection = "current";
-            } else if (now < begin) {
+            } else if (nowMinutes < beginMinutes) {
               targetSection = "upcoming";
             }
           }
@@ -462,22 +528,33 @@
           }
         }
 
-        generateTiming() {
-          if (this.scheduledAt === null) {
-            return `for ${Math.floor(this.duration.secs / 60)}, unscheduled`;
-          } else {
-            console.log(this);
-            let begin = Math.floor(this.scheduledAt.secs_since_epoch / 60);
-            let beginDate = new Date(begin * 60000);
-            let end = Math.floor(
-              (this.scheduledAt.secs_since_epoch + this.duration.secs) / 60
+        generateScheduledAt() {
+          if (this.scheduledAt !== null) {
+            let beginMinutes = Math.floor(
+              this.scheduledAt.secs_since_epoch / 60
             );
-            let now = Math.floor(Date.now() / 60000);
-            console.log(now);
-
-            let beginString = `${beginDate.getFullYear()}-${(
-              beginDate.getMonth() + 1
-            )
+            let beginDate = new Date(beginMinutes * 60000);
+            let durationMinutes = Math.floor(this.duration.secs / 60);
+            let nowMinutes = Math.floor(Date.now() / 60000);
+            let relativeSuffix = "";
+            if (
+              nowMinutes < beginMinutes &&
+              beginMinutes - nowMinutes <= durationMinutes
+            ) {
+              relativeSuffix = ` (in ${beginMinutes - nowMinutes} minute${
+                beginMinutes - nowMinutes === 1 ? "" : "s"
+              })`;
+            } else if (beginMinutes == nowMinutes) {
+              relativeSuffix = " (now)";
+            } else if (
+              beginMinutes <= nowMinutes &&
+              nowMinutes - beginMinutes <= durationMinutes
+            ) {
+              relativeSuffix = ` (${nowMinutes - beginMinutes} minute${
+                nowMinutes - beginMinutes === 1 ? "" : "s"
+              } ago)`;
+            }
+            return `at ${beginDate.getFullYear()}-${(beginDate.getMonth() + 1)
               .toString()
               .padStart(2, "0")}-${beginDate
               .getDate()
@@ -488,28 +565,53 @@
               .padStart(2, "0")}:${beginDate
               .getMinutes()
               .toString()
-              .padStart(2, "0")}`;
-            if (now > end) {
-              return `began at ${beginString} for ${end - begin} minute${
-                end - begin == 1 ? "" : "s"
-              }`;
-            } else if (now < end && now > begin) {
-              return `began at ${beginString}, ${end - now} of ${
-                end - begin
-              } minute${end - begin == 1 ? "" : "s"} left`;
-            } else if (now < begin) {
-              console.log("ok", beginString, end - begin);
-              return `begins at ${beginString} for ${end - begin} minute${
-                end - begin == 1 ? "" : "s"
-              }`;
+              .padStart(2, "0")}${relativeSuffix}`;
+          }
+
+          return "unscheduled";
+        }
+
+        updateScheduledAt() {
+          let scheduledAtString = this.generateScheduledAt();
+          if (scheduledAtString !== this.scheduledAtElement.innerText) {
+            this.scheduledAtElement.innerText = scheduledAtString;
+          }
+        }
+
+        generateDuration() {
+          let durationMinutes = Math.floor(this.duration.secs / 60);
+          let relativeSuffix = "";
+          if (this.scheduledAt !== null) {
+            let beginMinutes = Math.floor(
+              this.scheduledAt.secs_since_epoch / 60
+            );
+            let nowMinutes = Math.floor(Date.now() / 60000);
+            if (
+              beginMinutes <= nowMinutes &&
+              nowMinutes - beginMinutes < durationMinutes
+            ) {
+              let leftMinutes = durationMinutes - (nowMinutes - beginMinutes);
+              relativeSuffix = ` (${leftMinutes} minute${
+                leftMinutes === 1 ? "" : "s"
+              } left)`;
             }
+          }
+
+          return `for ${durationMinutes} minute${
+            durationMinutes === 1 ? "" : "s"
+          }${relativeSuffix}`;
+        }
+
+        updateDuration() {
+          let durationString = this.generateDuration();
+          if (durationString !== this.durationElement.innerText) {
+            this.durationElement.innerText = durationString;
           }
         }
 
         updateNoobs() {
-          this.noobsCheckboxElement.checked = this.noobs.includes(
-            currentUserId
-          );
+          this.noobsCheckboxElement.checked =
+            this.noobs.includes(currentUserId);
 
           this.noobsLabelElement.innerText = `${this.noobs.length} Noob${
             this.noobs.length == 1 ? "" : "s"
@@ -545,9 +647,8 @@
         }
 
         updateNerds() {
-          this.nerdsCheckboxElement.checked = this.nerds.includes(
-            currentUserId
-          );
+          this.nerdsCheckboxElement.checked =
+            this.nerds.includes(currentUserId);
 
           this.nerdsLabelElement.innerText = `${this.nerds.length} Nerd${
             this.nerds.length == 1 ? "" : "s"
