--- a/index.html
+++ b/index.html
@@ -805,6 +805,12 @@
           registerOptionElement.innerText = team;
         }
       }
+
+      // TODO: Add/remove talks
+      // TODO: permissions
+      // TODO: styling
+      // TODO: ICAL
+      // TODO: Login/Reconnection/Persistence/Robustness
     </script>
   </body>
 </html>
