Add center styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,17 @@
       MOPAD - Moderated Organization PAD (powerful, agile, distributed)
     </title>
     <style type="text/css">
-      .hidden {
-        display: none;
+      html, body {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+      }
+      body.center {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        justify-items: center;
+        align-items: center;
       }
     </style>
     <script src="mopad.js" defer></script>
