Move files, add styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,20 +15,7 @@
     <title>
       MOPAD - Moderated Organization PAD (powerful, agile, distributed)
     </title>
-    <style type="text/css">
-      html, body {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-      }
-      body.center {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        justify-items: center;
-        align-items: center;
-      }
-    </style>
+    <link rel="stylesheet" href="mopad.css" />
     <script src="mopad.js" defer></script>
   </head>
   <body></body>
