--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#388e3c" />
     <meta
       name="description"
       content="Moderated Organization PAD (powerful, agile, distributed)"
