--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1"
-    />
-    <meta name="theme-color" content="#388e3c" />
-    <meta
-      name="description"
-      content="Moderated Organization PAD (powerful, agile, distributed)"
-    />
-    <title>
-      MOPAD - Moderated Organization PAD (powerful, agile, distributed)
-    </title>
-    <link rel="stylesheet" href="mopad.css" />
-    <script src="mopad.js" defer></script>
-  </head>
-  <body></body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>MOPAD</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
